# EasyMusic

./: .gitignore  CMakeLists.txt  EasyMusic.dev  EasyMusic.h  EasyMusic_private.h  FreeImage.h  LICENSE  Lmenu.cpp  Makefile.win  PlayingSong.cpp  allClass.cpp  allProc.cpp  all_class.cpp  all_proc.cpp  apiservice.cpp  apiservice.h  config_service.cpp  config_service.h  foot_tool.cpp  foottool.cpp  gdiDevice.cpp  gdi_device.cpp  head_tool.cpp  headtool.cpp  main.cpp  myhead.h  mytools.cpp  navigation_bar.cpp  network.cpp  player.cpp  player_service.cpp  player_service.h  readme.md  tooltip.cpp  utfconvert.cpp  utfconvert.h  utils.cpp  utils.h  xmake.lua
lib/: WinMM.Lib  dwmapi.lib  gdiplus.lib  wininet.Lib
res/emf/: clock.emf  cloud.emf  collect.emf  download.emf  heart.emf  heart_grey.emf  music.emf
running_info/: running_info.h
scripts/: cpr.cmake  json.cmake  stb.cmake
tooltip/: tooltip.cpp  tooltip.h
